feat: IFS-4922 updates java 17 to 25 with openRewrite